--- a/about.html
+++ b/about.html
@@ -1,126 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Information – SunDarknessShine</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About the Artist – SunDarknessShine</title>
 
-<style>
-html, body{margin:0;padding:0;font-family:"Segoe UI",sans-serif;}
-body{
-  background:#000 url("background2.jpg") no-repeat center center fixed;
-  background-size:cover;
-  color:#D6A8F1;
-  text-align:center;
-  padding:2rem 1rem 3rem;
-  min-height:100vh;
-}
+  <style>
+    html, body { margin:0; padding:0; font-family:"Segoe UI", sans-serif; }
 
-.lang-switch{
-  position:absolute;
-  top:1.5rem;
-  right:1.5rem;
-  display:flex;
-  gap:.5rem;
-}
+    body{
+      background:#000 url("background2.jpg") no-repeat center center fixed;
+      background-size:cover;
+      color:#D6A8F1;
+      text-align:center;
+      padding:2rem 1rem 3rem;
+      min-height:100vh;
+    }
 
-.lang-switch button{
-  background:rgba(0,0,0,0.6);
-  border:1px solid rgba(255,255,255,0.7);
-  color:white;
-  border-radius:6px;
-  padding:.4rem .8rem;
-  cursor:pointer;
-}
+    .lang-switch{
+      position:absolute;
+      top:1.5rem;
+      right:1.5rem;
+      display:flex;
+      gap:.5rem;
+      z-index:5;
+    }
 
-.content{max-width:1100px;margin:5rem auto 0;}
+    .lang-switch button{
+      background:rgba(0,0,0,0.6);
+      border:1px solid rgba(255,255,255,0.7);
+      color:white;
+      border-radius:6px;
+      padding:.4rem .8rem;
+      cursor:pointer;
+      transition:background .25s;
+      font-size:.9rem;
+    }
+    .lang-switch button:hover{ background:rgba(255,255,255,0.25); }
 
-h1{
-  font-size:2.4rem;
-  letter-spacing:2px;
-  text-transform:uppercase;
-  margin-bottom:2rem;
-  color:#7A2E8E;
-  text-shadow:
-   -2px -2px 0 #000,
-    2px -2px 0 #000,
-   -2px  2px 0 #000,
-    2px  2px 0 #000,
-    0 0 25px rgba(122,46,142,0.7);
-}
+    .content{
+      max-width:1100px;
+      margin:5rem auto 0;
+      text-align:center;
+    }
 
-p{
-  font-size:1.6rem;
-  line-height:1.9;
-  margin-bottom:1.4rem;
-  color:#D6A8F1;
-  text-shadow:
-   -2px -2px 0 #000,
-    2px -2px 0 #000,
-   -2px  2px 0 #000,
-    2px  2px 0 #000,
-    0 0 18px rgba(0,0,0,0.9);
-}
+    h1{
+      font-size:2.4rem;
+      letter-spacing:2px;
+      text-transform:uppercase;
+      margin-bottom:1.3rem;
+      color:#7A2E8E;
+      text-shadow:
+       -2px -2px 0 #000,
+        2px -2px 0 #000,
+       -2px  2px 0 #000,
+        2px  2px 0 #000,
+        0 0 25px rgba(122,46,142,0.7);
+    }
 
-/* Magenta links */
-a{color:#FF3EFF;text-decoration:none;}
-a:hover{color:#FF7CFF;text-decoration:underline;}
+    .block{
+      margin:0 auto 1.8rem;
+      max-width:1000px;
+      text-align:left;
+    }
 
-.back{
-  display:inline-block;
-  margin-top:1.5rem;
-  padding:10px 16px;
-  border-radius:8px;
-  border:1px solid rgba(255,62,255,0.7);
-  color:#FF3EFF;
-  text-decoration:none;
-}
-.back:hover{
-  background:rgba(255,62,255,0.3);
-  border-color:#FF7CFF;
-  color:white;
-}
+    .block h2{
+      margin:1.2rem 0 .7rem;
+      font-size:1.5rem;
+      letter-spacing:1px;
+      color:#7A2E8E;
+      text-shadow:
+       -2px -2px 0 #000,
+        2px -2px 0 #000,
+       -2px  2px 0 #000,
+        2px  2px 0 #000,
+        0 0 20px rgba(122,46,142,0.55);
+      text-transform:uppercase;
+      text-align:center;
+    }
 
-@media(max-width:600px){
- h1{font-size:1.9rem;}
- p{font-size:1.2rem;}
-}
-</style>
+    p{
+      font-size:1.45rem;
+      line-height:1.85;
+      margin:0 0 1.1rem;
+      color:#D6A8F1;
+      text-shadow:
+       -2px -2px 0 #000,
+        2px -2px 0 #000,
+       -2px  2px 0 #000,
+        2px  2px 0 #000,
+        0 0 18px rgba(0,0,0,0.9);
+    }
+
+    ul{
+      margin:.2rem 0 1.1rem 1.2rem;
+      padding:0;
+    }
+
+    li{
+      font-size:1.45rem;
+      line-height:1.75;
+      margin:.55rem 0;
+      color:#D6A8F1;
+      text-shadow:
+       -2px -2px 0 #000,
+        2px -2px 0 #000,
+       -2px  2px 0 #000,
+        2px  2px 0 #000,
+        0 0 18px rgba(0,0,0,0.9);
+    }
+
+    a{ color:#FF3EFF; text-decoration:none; }
+    a:hover{ color:#FF7CFF; text-decoration:underline; }
+
+    .back{
+      display:inline-block;
+      margin-top:1.2rem;
+      padding:10px 16px;
+      border-radius:8px;
+      border:1px solid rgba(255,62,255,0.7);
+      color:#FF3EFF;
+      text-decoration:none;
+      text-shadow:none;
+    }
+    .back:hover{
+      background:rgba(255,62,255,0.3);
+      border-color:#FF7CFF;
+      color:white;
+    }
+
+    @media(max-width:600px){
+      h1{ font-size:1.9rem; }
+      .block h2{ font-size:1.25rem; }
+      p, li{ font-size:1.15rem; line-height:1.65; }
+      .block{ text-align:left; }
+    }
+  </style>
 </head>
 
 <body>
 
-<div class="lang-switch">
-  <button onclick="location.href='about_ru.html'">RU</button>
-  <button onclick="location.href='about_jp.html'">JP</button>
-</div>
+  <div class="lang-switch">
+    <button onclick="location.href='about_ru.html'">RU</button>
+    <button onclick="location.href='about_jp.html'">JP</button>
+  </div>
 
-<div class="content">
+  <div class="content">
+    <h1>SunDarknessShine</h1>
 
-<h1>Sundarknessshine</h1>
+    <!-- Block 1: short intro -->
+    <div class="block">
+      <h2>About the Artist</h2>
+      <p>
+        Explore the creative path and professional approach behind SunDarknessShine’s signature visual works.
+        See how one artistic language is expressed through tattoo, permanent makeup (PMU), and custom textile art.
+      </p>
+    </div>
 
-<p>Each artwork is created individually and exists as a unique, one-of-a-kind original piece. The author reserves the right to publish artworks.</p>
+    <!-- Block 2: detailed story -->
+    <div class="block">
+      <h2>Story & Approach</h2>
+      <p>
+        My name is Elena, and my creative journey is a fusion of precision, aesthetics, and craftsmanship.
+        Inspired by Japanese traditions and culture, combined with modern techniques, I specialize in three distinct
+        yet interconnected directions:
+      </p>
 
-<p>The image is permanent: it does not wash off, crack or fade. The clothing can be machine-washed.</p>
+      <ul>
+        <li><strong>Tattoo:</strong> high-quality tattoo work with a focus on detail and long-term durability.</li>
+        <li><strong>Permanent Makeup (PMU):</strong> enhancing natural beauty through delicate, precise procedures. My tattoo background helps me achieve clean symmetry and harmonious color balance.</li>
+        <li><strong>Custom Textile Art:</strong> transforming clothing and fabric into unique applied-art pieces. Each work is one of a kind and designed to reflect the owner’s individuality.</li>
+      </ul>
 
-<p>Typical production time is 2–5 days if there is no queue.</p>
+      <p>
+        My philosophy follows a “Japanese standard” of quality: perfection in every line and deep respect for your vision.
+        Whether I work with an Ambition machine on tattoo and PMU or paint fabric by hand, I always aim for a flawless result.
+      </p>
+    </div>
 
-<p>
-If you liked a model in the
-<a href="gallery.html">gallery</a>,
-you can purchase one of the presented works or place a personal order —
-please contact the artist via
-<a href="contact.html">contacts</a>.
-</p>
-
-<p>
-Approximate cost: from 20,000&nbsp;¥ — paintings, from 30,000&nbsp;¥ — clothing  
-(or 200&nbsp;€ / 300&nbsp;€, depending on region and complexity).
-</p>
-
-<a href="index.html" class="back">← Back to main page</a>
-
-</div>
+    <a href="index.html" class="back">← Back to Home</a>
+  </div>
 
 </body>
 </html>
