--- a/index_ru.html
+++ b/index_ru.html
@@ -172,7 +172,7 @@ footer{
 </div>
 
 <div class="top-tagline">
-  Мультиформатная арт-студия, объединяющая три направления искусства: татуировку, перманентный макияж и кастомную роспись по ткани в цельные визуальные образы через единый художественный подход.
+ SunDarknessShine — мультиформатная арт-студия, объединяющая три направления искусства:  татуировка, перманентный макияж, кастомная роспись по ткани в уникальные и визуальные образы, через единый художественный подход.
 </div>
 
 <div class="content">
