--- a/about2.html
+++ b/about2.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About the Artist – SunDarknessShine</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Info – Tattoo | SunDarknessShine</title>
 
   <style>
     html, body { margin:0; padding:0; font-family:"Segoe UI", sans-serif; }
@@ -48,7 +48,7 @@
       font-size:2.4rem;
       letter-spacing:2px;
       text-transform:uppercase;
-      margin-bottom:1.3rem;
+      margin-bottom:1.1rem;
       color:#7A2E8E;
       text-shadow:
        -2px -2px 0 #000,
@@ -59,13 +59,13 @@
     }
 
     .block{
-      margin:0 auto 1.8rem;
+      margin:0 auto 1.6rem;
       max-width:1000px;
       text-align:left;
     }
 
     .block h2{
-      margin:1.2rem 0 .7rem;
+      margin:1.0rem 0 .7rem;
       font-size:1.5rem;
       letter-spacing:1px;
       color:#7A2E8E;
@@ -82,7 +82,7 @@
     p{
       font-size:1.45rem;
       line-height:1.85;
-      margin:0 0 1.1rem;
+      margin:0 0 1.0rem;
       color:#D6A8F1;
       text-shadow:
        -2px -2px 0 #000,
@@ -139,47 +139,49 @@
 </head>
 
 <body>
-
   <div class="lang-switch">
-    <button onclick="location.href='about_ru.html'">RU</button>
-    <button onclick="location.href='about_jp.html'">JP</button>
+    <button onclick="location.href='about2_ru.html'">RU</button>
+    <button onclick="location.href='about2_jp.html'">JP</button>
   </div>
 
   <div class="content">
-    <h1>SunDarknessShine</h1>
+    <h1>Tattoo</h1>
 
-    <!-- Block 1: short intro -->
     <div class="block">
-      <h2>About the Artist</h2>
-      <p>
-        Explore the creative path and professional approach behind SunDarknessShine’s signature visual works.
-        See how one artistic language is expressed through tattoo, permanent makeup (PMU), and custom textile art.
-      </p>
-    </div>
+      <h2>Information</h2>
 
-    <!-- Block 2: detailed story -->
-    <div class="block">
-      <h2>Story & Approach</h2>
-      <p>
-        My name is Elena, and my creative journey is a fusion of precision, aesthetics, and craftsmanship.
-        Inspired by Japanese traditions and culture, combined with modern techniques, I specialize in three distinct
-        yet interconnected directions:
-      </p>
+      <p>🎨 <strong>Artistic tattoo</strong> is a long-lasting design applied to the skin.</p>
 
+      <p>✔️ <strong>The process includes:</strong></p>
       <ul>
-        <li><strong>Tattoo:</strong> high-quality tattoo work with a focus on detail and long-term durability.</li>
-        <li><strong>Permanent Makeup (PMU):</strong> enhancing natural beauty through delicate, precise procedures. My tattoo background helps me achieve clean symmetry and harmonious color balance.</li>
-        <li><strong>Custom Textile Art:</strong> transforming clothing and fabric into unique applied-art pieces. Each work is one of a kind and designed to reflect the owner’s individuality.</li>
+        <li>Consultation (choosing a sketch, size, and placement).</li>
+        <li>Workstation preparation and sterilization.</li>
+        <li>Tattoo application — from simple lines to complex designs.</li>
+        <li>Aftercare instructions for proper healing.</li>
       </ul>
 
-      <p>
-        My philosophy follows a “Japanese standard” of quality: perfection in every line and deep respect for your vision.
-        Whether I work with an Ambition machine on tattoo and PMU or paint fabric by hand, I always aim for a flawless result.
-      </p>
+      <p>👉 The procedure requires attention to detail, precision, and strict hygiene standards to prevent infection and ensure a high-quality result.</p>
+
+      <p>💡 <strong>Main factors that affect pricing:</strong></p>
+      <ul>
+        <li><strong>Size & complexity:</strong> larger and more detailed pieces take longer and cost more.</li>
+        <li><strong>Black & grey vs color:</strong> color tattoos are usually more expensive due to technique and materials.</li>
+      </ul>
+
+      <p>🎨 Large projects (sleeve, back, etc.) are typically done in multiple sessions so the skin can rest and heal well between sessions.</p>
+
+      <p>⏱️ <strong>Minimum price:</strong> from 5,000&nbsp;JPY.</p>
+
+      <p>💡 <strong>Important 😉</strong></p>
+      <ul>
+        <li>Appointments only.</li>
+        <li>Contraindications and aftercare recommendations are discussed before the procedure.</li>
+      </ul>
+
+      <p>✍️ For consultation, please contact me via <a href="contact.html">contacts</a>.😉</p>
+
+      <a href="index2.html" class="back">← Back</a>
     </div>
-
-    <a href="index.html" class="back">← Back to Home</a>
   </div>
-
 </body>
 </html>
