--- a/about2_jp.html
+++ b/about2_jp.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>アーティストについて – SunDarknessShine</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>情報 – タトゥー | SunDarknessShine</title>
 
   <style>
     html, body { margin:0; padding:0; font-family:"Segoe UI", sans-serif; }
@@ -48,7 +48,7 @@
       font-size:2.4rem;
       letter-spacing:2px;
       text-transform:uppercase;
-      margin-bottom:1.3rem;
+      margin-bottom:1.1rem;
       color:#7A2E8E;
       text-shadow:
        -2px -2px 0 #000,
@@ -59,13 +59,13 @@
     }
 
     .block{
-      margin:0 auto 1.8rem;
+      margin:0 auto 1.6rem;
       max-width:1000px;
       text-align:left;
     }
 
     .block h2{
-      margin:1.2rem 0 .7rem;
+      margin:1.0rem 0 .7rem;
       font-size:1.5rem;
       letter-spacing:1px;
       color:#7A2E8E;
@@ -82,7 +82,7 @@
     p{
       font-size:1.45rem;
       line-height:1.85;
-      margin:0 0 1.1rem;
+      margin:0 0 1.0rem;
       color:#D6A8F1;
       text-shadow:
        -2px -2px 0 #000,
@@ -139,49 +139,49 @@
 </head>
 
 <body>
-
   <div class="lang-switch">
-    <button onclick="location.href='about.html'">EN</button>
-    <button onclick="location.href='about_ru.html'">RU</button>
+    <button onclick="location.href='about2.html'">EN</button>
+    <button onclick="location.href='about2_ru.html'">RU</button>
   </div>
 
   <div class="content">
-    <h1>SunDarknessShine</h1>
+    <h1>タトゥー</h1>
 
-    <!-- Block 1: short intro -->
     <div class="block">
-      <h2>アーティストについて</h2>
-      <p>
-        SunDarknessShine の制作背景とプロフェッショナルなアプローチをご紹介します。
-        一つの美的感覚（ビジュアル言語）が、タトゥー、アートメイク（PMU）、カスタムテキスタイルアートに
-        どのように活かされているかをご覧ください。
-      </p>
-    </div>
+      <h2>情報</h2>
 
-    <!-- Block 2: detailed story -->
-    <div class="block">
-      <h2>ストーリーと制作姿勢</h2>
-      <p>
-        はじめまして、エレナ（Elena）です。私の創作は「精密さ」「美しさ」「技術」を重ね合わせることから始まります。
-        日本の伝統や文化からインスピレーションを受けつつ、現代的な技術も取り入れながら、
-        互いに繋がる3つの分野を中心に制作しています。
-      </p>
+      <p>🎨 <strong>アートタトゥー</strong>は、皮膚に長期間残るデザインを施す施術です。</p>
 
+      <p>✔️ <strong>施術の流れ：</strong></p>
       <ul>
-        <li><strong>タトゥー：</strong> 細部へのこだわりと長期的な美しさ（持続性）を重視した高品質な施術。</li>
-        <li><strong>アートメイク（PMU）：</strong> 繊細で正確な技術で自然な美しさを引き立てます。タトゥー経験を活かし、左右対称と色の調和を丁寧に整えます。</li>
-        <li><strong>カスタムテキスタイルアート：</strong> 衣類や布を一点ものの作品へ。持ち主の個性を映す、唯一の表現として仕上げます。</li>
+        <li>カウンセリング（デザイン・サイズ・位置の相談）</li>
+        <li>作業環境の準備と滅菌</li>
+        <li>施術（シンプルな線から複雑なデザインまで）</li>
+        <li>アフターケア（治癒のための注意点のご案内）</li>
       </ul>
 
-      <p>
-        私の哲学は「日本基準」のクオリティ――一本のラインまで妥協せず、あなたのイメージを深く尊重すること。
-        Ambition のマシンでタトゥーやPMUを行う時も、手作業で布にペイントを施す時も、
-        常に完成度の高い結果を目指しています。
-      </p>
+      <p>👉 高品質な仕上がりのためには、細部へのこだわり、正確さ、そして衛生管理の徹底が重要です。</p>
+
+      <p>💡 <strong>料金に影響する主な要素：</strong></p>
+      <ul>
+        <li><strong>サイズ・難易度：</strong>大きく、細かいほど時間がかかり料金も上がります。</li>
+        <li><strong>モノクロ／カラー：</strong>カラーは技術と材料の関係で高くなることが多いです。</li>
+      </ul>
+
+      <p>🎨 大きな作品（スリーブ、背中など）は、皮膚を休ませて回復を促すため複数回に分けて行う場合があります。</p>
+
+      <p>⏱️ <strong>最低料金：</strong>5,000円〜。</p>
+
+      <p>💡 <strong>大切なポイント 😉</strong></p>
+      <ul>
+        <li>完全予約制です。</li>
+        <li>施術前に禁忌事項やアフターケアの注意点を必ず確認します。</li>
+      </ul>
+
+      <p>✍️ ご相談は <a href="contact_jp.html">コンタクト</a> からご連絡ください。😉</p>
+
+      <a href="index2_jp.html" class="back">← 戻る</a>
     </div>
-
-    <a href="index_jp.html" class="back">← トップへ戻る</a>
   </div>
-
 </body>
 </html>
