--- a/about3.html
+++ b/about3.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About the Artist – SunDarknessShine</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Info – PMU | SunDarknessShine</title>
 
   <style>
     html, body { margin:0; padding:0; font-family:"Segoe UI", sans-serif; }
@@ -48,7 +48,7 @@
       font-size:2.4rem;
       letter-spacing:2px;
       text-transform:uppercase;
-      margin-bottom:1.3rem;
+      margin-bottom:1.1rem;
       color:#7A2E8E;
       text-shadow:
        -2px -2px 0 #000,
@@ -59,13 +59,13 @@
     }
 
     .block{
-      margin:0 auto 1.8rem;
+      margin:0 auto 1.6rem;
       max-width:1000px;
       text-align:left;
     }
 
     .block h2{
-      margin:1.2rem 0 .7rem;
+      margin:1.0rem 0 .7rem;
       font-size:1.5rem;
       letter-spacing:1px;
       color:#7A2E8E;
@@ -82,7 +82,7 @@
     p{
       font-size:1.45rem;
       line-height:1.85;
-      margin:0 0 1.1rem;
+      margin:0 0 1.0rem;
       color:#D6A8F1;
       text-shadow:
        -2px -2px 0 #000,
@@ -108,6 +108,19 @@
        -2px  2px 0 #000,
         2px  2px 0 #000,
         0 0 18px rgba(0,0,0,0.9);
+    }
+
+    .price-list{
+      list-style:none;
+      margin:.4rem 0 1.2rem;
+      padding:0;
+    }
+    .price-list li{
+      margin:.6rem 0;
+      padding:.6rem .9rem;
+      border:1px solid rgba(255,62,255,.45);
+      border-radius:10px;
+      background:rgba(0,0,0,.25);
     }
 
     a{ color:#FF3EFF; text-decoration:none; }
@@ -139,47 +152,58 @@
 </head>
 
 <body>
-
   <div class="lang-switch">
-    <button onclick="location.href='about_ru.html'">RU</button>
-    <button onclick="location.href='about_jp.html'">JP</button>
+    <button onclick="location.href='about3_ru.html'">RU</button>
+    <button onclick="location.href='about3_jp.html'">JP</button>
   </div>
 
   <div class="content">
-    <h1>SunDarknessShine</h1>
+    <h1>PMU</h1>
 
-    <!-- Block 1: short intro -->
     <div class="block">
-      <h2>About the Artist</h2>
-      <p>
-        Explore the creative path and professional approach behind SunDarknessShine’s signature visual works.
-        See how one artistic language is expressed through tattoo, permanent makeup (PMU), and custom textile art.
-      </p>
-    </div>
+      <h2>PMU Information</h2>
 
-    <!-- Block 2: detailed story -->
-    <div class="block">
-      <h2>Story & Approach</h2>
       <p>
-        My name is Elena, and my creative journey is a fusion of precision, aesthetics, and craftsmanship.
-        Inspired by Japanese traditions and culture, combined with modern techniques, I specialize in three distinct
-        yet interconnected directions:
+        🪄 <strong>Permanent Makeup (PMU)</strong> is a cosmetic procedure where special pigments are implanted into
+        the upper layers of the skin (dermis) to imitate makeup or enhance facial features — brows, lips, eyes, etc.
+        It helps save time on daily makeup and solves aesthetic goals (brow shape, eyeliner line, lip contour, and more).
       </p>
 
+      <p>💆‍♀️ <strong>How the procedure works:</strong></p>
       <ul>
-        <li><strong>Tattoo:</strong> high-quality tattoo work with a focus on detail and long-term durability.</li>
-        <li><strong>Permanent Makeup (PMU):</strong> enhancing natural beauty through delicate, precise procedures. My tattoo background helps me achieve clean symmetry and harmonious color balance.</li>
-        <li><strong>Custom Textile Art:</strong> transforming clothing and fabric into unique applied-art pieces. Each work is one of a kind and designed to reflect the owner’s individuality.</li>
+        <li>Consultation and selection of shape/color;</li>
+        <li>Disinfection and anesthesia (if needed);</li>
+        <li>Pigment application using a specialized machine;</li>
+        <li>Healing period and follow-up corrections.</li>
       </ul>
 
-      <p>
-        My philosophy follows a “Japanese standard” of quality: perfection in every line and deep respect for your vision.
-        Whether I work with an Ambition machine on tattoo and PMU or paint fabric by hand, I always aim for a flawless result.
-      </p>
+      <p>📌 The full appointment usually takes <strong>1.5–3 hours</strong> and includes discussion of the desired result and aftercare.</p>
+      <p>📌 A touch-up is recommended after <strong>4–8 weeks</strong>.</p>
+
+      <p>📌 <strong>Aftercare notes:</strong></p>
+      <ul>
+        <li>Mild swelling and redness may occur during the first days.</li>
+        <li>Do not pick the scabs while healing.</li>
+        <li>Follow the aftercare guidance (protective cream, avoid water/sweat).</li>
+      </ul>
+
+      <p>💰 <strong>Pricing:</strong></p>
+      <ul class="price-list">
+        <p><strong>Brows (powder effect)</strong> — 35,000&nbsp;JPY</p>
+        <p><strong>Eyeliner / wings / lash line</strong> — 25,000&nbsp;JPY</p>
+        <p><strong>Lips (Lip blush)</strong> — 35,000&nbsp;JPY</p>
+      </ul>
+
+      <p>💡 <strong>Important 😉</strong></p>
+      <ul>
+        <li>Appointment only.</li>
+        <li>Contraindications and aftercare recommendations are discussed before the procedure.</li>
+      </ul>
+
+      <p>✍️ For consultation, please contact me via <a href="contact.html">contacts</a> 😉</p>
+
+      <a href="index3.html" class="back">← Back</a>
     </div>
-
-    <a href="index.html" class="back">← Back to Home</a>
   </div>
-
 </body>
 </html>
