--- a/about3_jp.html
+++ b/about3_jp.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>アーティストについて – SunDarknessShine</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>情報 – アートメイク（PMU） | SunDarknessShine</title>
 
   <style>
     html, body { margin:0; padding:0; font-family:"Segoe UI", sans-serif; }
@@ -48,7 +48,7 @@
       font-size:2.4rem;
       letter-spacing:2px;
       text-transform:uppercase;
-      margin-bottom:1.3rem;
+      margin-bottom:1.1rem;
       color:#7A2E8E;
       text-shadow:
        -2px -2px 0 #000,
@@ -59,13 +59,13 @@
     }
 
     .block{
-      margin:0 auto 1.8rem;
+      margin:0 auto 1.6rem;
       max-width:1000px;
       text-align:left;
     }
 
     .block h2{
-      margin:1.2rem 0 .7rem;
+      margin:1.0rem 0 .7rem;
       font-size:1.5rem;
       letter-spacing:1px;
       color:#7A2E8E;
@@ -82,7 +82,7 @@
     p{
       font-size:1.45rem;
       line-height:1.85;
-      margin:0 0 1.1rem;
+      margin:0 0 1.0rem;
       color:#D6A8F1;
       text-shadow:
        -2px -2px 0 #000,
@@ -108,6 +108,19 @@
        -2px  2px 0 #000,
         2px  2px 0 #000,
         0 0 18px rgba(0,0,0,0.9);
+    }
+
+    .price-list{
+      list-style:none;
+      margin:.4rem 0 1.2rem;
+      padding:0;
+    }
+    .price-list li{
+      margin:.6rem 0;
+      padding:.6rem .9rem;
+      border:1px solid rgba(255,62,255,.45);
+      border-radius:10px;
+      background:rgba(0,0,0,.25);
     }
 
     a{ color:#FF3EFF; text-decoration:none; }
@@ -139,49 +152,58 @@
 </head>
 
 <body>
-
   <div class="lang-switch">
-    <button onclick="location.href='about.html'">EN</button>
-    <button onclick="location.href='about_ru.html'">RU</button>
+    <button onclick="location.href='about3.html'">EN</button>
+    <button onclick="location.href='about3_ru.html'">RU</button>
   </div>
 
   <div class="content">
-    <h1>SunDarknessShine</h1>
+    <h1>PMU</h1>
 
-    <!-- Block 1: short intro -->
     <div class="block">
-      <h2>アーティストについて</h2>
-      <p>
-        SunDarknessShine の制作背景とプロフェッショナルなアプローチをご紹介します。
-        一つの美的感覚（ビジュアル言語）が、タトゥー、アートメイク（PMU）、カスタムテキスタイルアートに
-        どのように活かされているかをご覧ください。
-      </p>
-    </div>
+      <h2>PMUのご案内</h2>
 
-    <!-- Block 2: detailed story -->
-    <div class="block">
-      <h2>ストーリーと制作姿勢</h2>
       <p>
-        はじめまして、エレナ（Elena）です。私の創作は「精密さ」「美しさ」「技術」を重ね合わせることから始まります。
-        日本の伝統や文化からインスピレーションを受けつつ、現代的な技術も取り入れながら、
-        互いに繋がる3つの分野を中心に制作しています。
+        🪄 <strong>アートメイク（PMU）</strong>は、専用の色素（ピグメント）を皮膚の浅い層に入れて
+        メイクのような効果を再現したり、顔立ちを整えたりする美容施術です（眉・リップ・アイラインなど）。
+        毎日のメイク時間を短縮し、形やライン、輪郭などの美的なお悩みをサポートします。
       </p>
 
+      <p>💆‍♀️ <strong>施術の流れ：</strong></p>
       <ul>
-        <li><strong>タトゥー：</strong> 細部へのこだわりと長期的な美しさ（持続性）を重視した高品質な施術。</li>
-        <li><strong>アートメイク（PMU）：</strong> 繊細で正確な技術で自然な美しさを引き立てます。タトゥー経験を活かし、左右対称と色の調和を丁寧に整えます。</li>
-        <li><strong>カスタムテキスタイルアート：</strong> 衣類や布を一点ものの作品へ。持ち主の個性を映す、唯一の表現として仕上げます。</li>
+        <li>カウンセリング（形・色のデザイン）</li>
+        <li>消毒・麻酔（必要に応じて）</li>
+        <li>専用マシンでピグメントを定着</li>
+        <li>回復期間 → 必要に応じてリタッチ</li>
       </ul>
 
-      <p>
-        私の哲学は「日本基準」のクオリティ――一本のラインまで妥協せず、あなたのイメージを深く尊重すること。
-        Ambition のマシンでタトゥーやPMUを行う時も、手作業で布にペイントを施す時も、
-        常に完成度の高い結果を目指しています。
-      </p>
+      <p>📌 施術時間は通常 <strong>1.5〜3時間</strong>。仕上がりイメージの確認とアフターケア説明を含みます。</p>
+      <p>📌 施術後 <strong>4〜8週間</strong> でのリタッチ（補正）が推奨されます。</p>
+
+      <p>📌 <strong>アフターケアのポイント：</strong></p>
+      <ul>
+        <li>施術直後数日は軽い腫れ・赤みが出る場合があります。</li>
+        <li>治癒中のかさぶたは剥がさないでください。</li>
+        <li>ケア指示を守る（保護クリーム／水・汗を避ける 等）。</li>
+      </ul>
+
+      <p>💰 <strong>料金：</strong></p>
+      <ul class="price-list">
+        <p><strong>眉（パウダー）</strong> — 35,000円</p>
+        <p><strong>アイライン／跳ね上げ／インライン</strong> — 25,000円</p>
+        <p><strong>リップ（リップブラッシュ）</strong> — 35,000円</p>
+      </ul>
+
+      <p>💡 <strong>重要 😉</strong></p>
+      <ul>
+        <li>完全予約制です。</li>
+        <li>施術前に禁忌事項とアフターケアを必ず確認します。</li>
+      </ul>
+
+      <p>✍️ ご相談は <a href="contact_jp.html">コンタクト</a> からどうぞ 😉</p>
+
+      <a href="index3_jp.html" class="back">← 戻る</a>
     </div>
-
-    <a href="index_jp.html" class="back">← トップへ戻る</a>
   </div>
-
 </body>
 </html>
