--- a/about2_ru.html
+++ b/about2_ru.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>О художнике – SunDarknessShine</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Информация – Тату | SunDarknessShine</title>
 
   <style>
     html, body { margin:0; padding:0; font-family:"Segoe UI", sans-serif; }
@@ -48,7 +48,7 @@
       font-size:2.4rem;
       letter-spacing:2px;
       text-transform:uppercase;
-      margin-bottom:1.3rem;
+      margin-bottom:1.1rem;
       color:#7A2E8E;
       text-shadow:
        -2px -2px 0 #000,
@@ -58,15 +58,14 @@
         0 0 25px rgba(122,46,142,0.7);
     }
 
-    /* two blocks */
     .block{
-      margin:0 auto 1.8rem;
+      margin:0 auto 1.6rem;
       max-width:1000px;
       text-align:left;
     }
 
     .block h2{
-      margin:1.2rem 0 .7rem;
+      margin:1.0rem 0 .7rem;
       font-size:1.5rem;
       letter-spacing:1px;
       color:#7A2E8E;
@@ -83,7 +82,7 @@
     p{
       font-size:1.45rem;
       line-height:1.85;
-      margin:0 0 1.1rem;
+      margin:0 0 1.0rem;
       color:#D6A8F1;
       text-shadow:
        -2px -2px 0 #000,
@@ -141,48 +140,49 @@
 </head>
 
 <body>
-
   <div class="lang-switch">
-    <button onclick="location.href='about.html'">EN</button>
-    <button onclick="location.href='about_jp.html'">JP</button>
+    <button onclick="location.href='about2.html'">EN</button>
+    <button onclick="location.href='about2_jp.html'">JP</button>
   </div>
 
   <div class="content">
-    <h1>SunDarknessShine</h1>
+    <h1>Тату</h1>
 
-    <!-- Block 1: short intro -->
     <div class="block">
-      <h2>О художнике</h2>
-      <p>
-        Изучите творческий путь и профессиональный подход художницы уникальных визуальных образов.
-        Узнайте, как единый художественный подход применяется в татуировке, перманентном макияже
-        и кастомной росписи по ткани.
-      </p>
-    </div>
+      <h2>Информация</h2>
 
-    <!-- Block 2: detailed story -->
-    <div class="block">
-      <h2>История и подход</h2>
-      <p>
-        Меня зовут Елена, и мой творческий путь — это слияние точности, эстетики и мастерства.
-        Вдохновляясь японскими традициями и культурой в сочетании с современными техниками,
-        я работаю в трёх разных, но взаимосвязанных направлениях:
-      </p>
+      <p>🎨 <strong>Художественная татуировка</strong> — это долговременное нанесение рисунка на кожу.</p>
 
+      <p>✔️ <strong>Процесс включает:</strong></p>
       <ul>
-        <li><strong>Искусство татуировки:</strong> высококачественная татуировка с акцентом на детализацию и долговечность.</li>
-        <li><strong>Перманентный макияж:</strong> подчёркивание естественной красоты деликатными и точными процедурами. Опыт тату-мастера помогает добиваться идеальной симметрии и цветовой гармонии.</li>
-        <li><strong>Кастом по ткани:</strong> превращение вещей и текстиля в уникальные произведения прикладного искусства. Каждая работа — единственная в своём роде и отражает индивидуальность владельца.</li>
+        <li>Консультацию с мастером (выбор эскиза, размера, расположения).</li>
+        <li>Подготовку и стерилизацию рабочего места.</li>
+        <li>Нанесение татуировки — от простой линии до сложного рисунка.</li>
+        <li>Уход после: инструкции по заживлению.</li>
       </ul>
 
-      <p>
-        Моя философия основана на «японском стандарте» качества — совершенстве каждой линии и уважении к вашему видению.
-        Работаю ли я машинкой Ambition над татуировкой и перманентом или расписываю ткань вручную — я всегда стремлюсь к безупречному результату.
-      </p>
+      <p>👉 Процедура требует внимания к деталям, аккуратности и соблюдения всех санитарных норм, чтобы избежать инфекций и добиться качественного результата.</p>
+
+      <p>💡 <strong>Основные факторы, влияющие на цену:</strong></p>
+      <ul>
+        <li><strong>Размер и сложность:</strong> чем больше и детальнее рисунок, тем дольше работа и выше стоимость.</li>
+        <li><strong>Чёрно-белая или цветная:</strong> цветные тату обычно дороже из-за более сложной техники и расхода материалов.</li>
+      </ul>
+
+      <p>🎨 Большие работы (например, рукав, спина) обычно делаются за несколько сеансов, чтобы кожа успела отдохнуть и хорошо зажить между ними.</p>
+
+      <p>⏱️ <strong>Минимальная стоимость:</strong> от 5&nbsp;000&nbsp;¥.</p>
+
+      <p>💡 <strong>Важно 😉</strong></p>
+      <ul>
+        <li>Я работаю только по предварительной записи.</li>
+        <li>Перед процедурой обязательно обсуждаются противопоказания и рекомендации по уходу.</li>
+      </ul>
+
+      <p>✍️ По вопросам консультации, обращайтесь в <a href="contact_ru.html">контакты</a>.😉</p>
+
+      <a href="index2_ru.html" class="back">← Назад</a>
     </div>
-
-    <a href="index_ru.html" class="back">← Назад на главную</a>
   </div>
-
 </body>
 </html>
