--- a/about3_ru.html
+++ b/about3_ru.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>О художнике – SunDarknessShine</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Информация – Перманент | SunDarknessShine</title>
 
   <style>
     html, body { margin:0; padding:0; font-family:"Segoe UI", sans-serif; }
@@ -48,7 +48,7 @@
       font-size:2.4rem;
       letter-spacing:2px;
       text-transform:uppercase;
-      margin-bottom:1.3rem;
+      margin-bottom:1.1rem;
       color:#7A2E8E;
       text-shadow:
        -2px -2px 0 #000,
@@ -58,15 +58,14 @@
         0 0 25px rgba(122,46,142,0.7);
     }
 
-    /* two blocks */
     .block{
-      margin:0 auto 1.8rem;
+      margin:0 auto 1.6rem;
       max-width:1000px;
       text-align:left;
     }
 
     .block h2{
-      margin:1.2rem 0 .7rem;
+      margin:1.0rem 0 .7rem;
       font-size:1.5rem;
       letter-spacing:1px;
       color:#7A2E8E;
@@ -83,7 +82,7 @@
     p{
       font-size:1.45rem;
       line-height:1.85;
-      margin:0 0 1.1rem;
+      margin:0 0 1.0rem;
       color:#D6A8F1;
       text-shadow:
        -2px -2px 0 #000,
@@ -111,7 +110,19 @@
         0 0 18px rgba(0,0,0,0.9);
     }
 
-    /* Magenta links */
+    .price-list{
+      list-style:none;
+      margin:.4rem 0 1.2rem;
+      padding:0;
+    }
+    .price-list li{
+      margin:.6rem 0;
+      padding:.6rem .9rem;
+      border:1px solid rgba(255,62,255,.45);
+      border-radius:10px;
+      background:rgba(0,0,0,.25);
+    }
+
     a{ color:#FF3EFF; text-decoration:none; }
     a:hover{ color:#FF7CFF; text-decoration:underline; }
 
@@ -141,48 +152,59 @@
 </head>
 
 <body>
-
   <div class="lang-switch">
-    <button onclick="location.href='about.html'">EN</button>
-    <button onclick="location.href='about_jp.html'">JP</button>
+    <button onclick="location.href='about3.html'">EN</button>
+    <button onclick="location.href='about3_jp.html'">JP</button>
   </div>
 
   <div class="content">
-    <h1>SunDarknessShine</h1>
+    <h1>Перманент</h1>
 
-    <!-- Block 1: short intro -->
     <div class="block">
-      <h2>О художнике</h2>
-      <p>
-        Изучите творческий путь и профессиональный подход художницы уникальных визуальных образов.
-        Узнайте, как единый художественный подход применяется в татуировке, перманентном макияже
-        и кастомной росписи по ткани.
-      </p>
-    </div>
+      <h2>Информация ПМ</h2>
 
-    <!-- Block 2: detailed story -->
-    <div class="block">
-      <h2>История и подход</h2>
       <p>
-        Меня зовут Елена, и мой творческий путь — это слияние точности, эстетики и мастерства.
-        Вдохновляясь японскими традициями и культурой в сочетании с современными техниками,
-        я работаю в трёх разных, но взаимосвязанных направлениях:
+        🪄 <strong>Перманентный макияж (ПМУ)</strong> — это косметическая процедура введения специальных пигментов
+        в верхние слои кожи (дермы), чтобы имитировать макияж или улучшить черты лица: брови, губы, глаза и др.
+        Он помогает экономить время на ежедневное нанесение косметики и решает эстетические задачи
+        (форма бровей, линия глаз, контур губ и др.).
       </p>
 
+      <p>💆‍♀️ <strong>Как проходит процедура:</strong></p>
       <ul>
-        <li><strong>Искусство татуировки:</strong> высококачественная татуировка с акцентом на детализацию и долговечность.</li>
-        <li><strong>Перманентный макияж:</strong> подчёркивание естественной красоты деликатными и точными процедурами. Опыт тату-мастера помогает добиваться идеальной симметрии и цветовой гармонии.</li>
-        <li><strong>Кастом по ткани:</strong> превращение вещей и текстиля в уникальные произведения прикладного искусства. Каждая работа — единственная в своём роде и отражает индивидуальность владельца.</li>
+        <li>Консультация и подбор формы/цвета;</li>
+        <li>Дезинфекция и анестезия (при необходимости);</li>
+        <li>Нанесение пигмента специальной машинкой;</li>
+        <li>Перерыв/заживление и последующие корректировки.</li>
       </ul>
 
-      <p>
-        Моя философия основана на «японском стандарте» качества — совершенстве каждой линии и уважении к вашему видению.
-        Работаю ли я машинкой Ambition над татуировкой и перманентом или расписываю ткань вручную — я всегда стремлюсь к безупречному результату.
-      </p>
+      <p>📌 Обычно вся процедура занимает <strong>1,5–3 часа</strong> и включает обсуждение желаемого результата и уход после.</p>
+      <p>📌 После первых <strong>4–8 недель</strong> желательно проводится коррекция.</p>
+
+      <p>📌 <strong>Важные моменты по уходу:</strong></p>
+      <ul>
+        <li>В первые дни после процедуры возможны лёгкая отёчность и покраснение.</li>
+        <li>Нельзя отрывать корочки при заживлении.</li>
+        <li>Соблюдать рекомендации мастера по уходу (защитный крем, избегать воды/пота).</li>
+      </ul>
+
+      <p>💰 <strong>Стоимость по процедурам:</strong></p>
+      <ul class="price-list">
+        <p><strong>Брови (пудровое напыление)</strong> — 35&nbsp;000&nbsp;¥</p>
+        <p><strong>Лайнер / стрелки / межресничка</strong> — 25&nbsp;000&nbsp;¥</p>
+        <p><strong>Губы (Lip blush)</strong> — 35&nbsp;000&nbsp;¥</p>
+      </ul>
+
+      <p>💡 <strong>Важно 😉</strong></p>
+      <ul>
+        <li>Я работаю только по предварительной записи.</li>
+        <li>Перед процедурой обязательно обсуждаются противопоказания и рекомендации по уходу.</li>
+      </ul>
+
+      <p>✍️ По вопросам консультации, обращайтесь в <a href="contact_ru.html">контакты</a> 😉</p>
+
+      <a href="index3_ru.html" class="back">← Назад</a>
     </div>
-
-    <a href="index_ru.html" class="back">← Назад на главную</a>
   </div>
-
 </body>
 </html>
