--- a/about3_ru.html
+++ b/about3_ru.html
@@ -161,7 +161,7 @@
     <h1>Перманент</h1>
 
     <div class="block">
-      <h2>Информация ПМ</h2>
+      <h2>Информация</h2>
 
       <p>
         🪄 <strong>Перманентный макияж (ПМУ)</strong> — это косметическая процедура введения специальных пигментов
